--- a/src/app/components/create-car/create-car.component.html
+++ b/src/app/components/create-car/create-car.component.html
@@ -66,7 +66,7 @@
 
 
       <div class="form-group">
-        <label for="carPictures">Images</label>
+        <label for="carPictures">Images </label>
         <input name="pictures" formControlName="pictures" type="text" class="form-control" id="carPictures" aria-describedby="Importer une image du véhicule à vendre" placeholder="">
       </div>
 
@@ -75,12 +75,12 @@
         <label for="carSold">Le véhicule est-il à vendre ?</label>
 
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="carSold" value="false" checked>
+          <input class="form-check-input" formControlName="sold" type="radio" name="sold" id="carSold" value="false" checked>
           <label class="form-check-label" for="carSold">A vendre</label>
         </div>
 
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="carSold2" value="true">
+          <input class="form-check-input" formControlName="sold" type="radio" name="sold" id="carSold2" value="true">
           <label class="form-check-label" for="carSold2">Vendue</label>
         </div>
 
